@@ -19,7 +19,7 @@ $datefmt = '%d %B %Y στις %H:%M:%S';
 
 // To Arrange
 
-$timespanfmt = '%s μέρες, %s ώρες, %s λεπτά και %s δευτερόλεπτα';
+$timespanfmt = '%s μέρες, %s ώρες, %s λεπτά %s δευτερόλεπτα';
 
 $strAbortedClients = 'Ακυρωμένες συνδέσεις';
 $strAccessDeniedExplanation = 'Το phpMyAdmin προσπάθησε να συνδεθεί με τον διακομιστή MySQL αλλά ο διακομιστής απέρριψε τη σύνδεση. Θα πρέπει να ελέγξετε την διεύθυνση, το όνομα χρήστη και τον κωδικό πρόσβασης στο αρχείο ρυθμίσεων config.inc.php και να βεβαιωθείτε ότι αντιστοιχούν σε αυτά που σας έχει δώσει ο διαχειρηστής του διακομιστή MySQL.';
@@ -134,7 +134,7 @@ $strDatabasesStatsHeavyTraffic = 'Σημείωση: Η ενεργοποίηση 
 $strDatabasesStats = 'Στατιστικά βάσης';
 $strDatabases = 'Βάσεις Δεδομένων';
 $strDatabase = 'Βάση';
-$strDataDict = 'Λεξικό δεδομένων';
+$strDataDict = 'Περιληπτικός πίνακας δεδομένων';
 $strDataOnly = 'Μόνο τα δεδομένα';
 $strData = 'Δεδομένα';
 $strDBComment = 'Σχόλιο βάσης: ';
@@ -150,7 +150,7 @@ $strDeleting = 'Διαγραφή %s';
 $strDelOld = 'Η τρέχουσα σελίδα έχει αναφορές σε πίνακες που δεν υπάρχουν πια. Θέλετε να διαγραφές αυτές οι αναφορές;';
 $strDescending = 'Φθίνουσα';
 $strDescription = 'Περιγραφή';
-$strDictionary = 'λεξικό';
+$strDictionary = 'περιληπτικός πίνακας';
 $strDisabled = 'Απενεργοποιημένο';
 $strDisplayFeat = 'Λειτουργίες εμφάνισης';
 $strDisplayOrder = 'Σειρά εμφάνισης:';
@@ -250,7 +250,7 @@ $strKill = 'Τερματισμός';
 $strKorean = 'Κορεατικά';
 
 $strLandscape = 'Οριζόντια διάταξη';
-$strLaTeX = 'LaTeX';
+$strLaTeX = 'Έγγραφο LaTeX';
 $strLengthSet = 'Μήκος/Τιμές*';
 $strLimitNumRows = 'Εγγραφές ανά σελίδα';
 $strLinesTerminatedBy = 'Γραμμές που τελειώνουν σε';
@@ -321,7 +321,7 @@ $strOK = 'Εντάξει';
 $strOperations = 'Λειτουργίες';
 $strOptimizeTable = 'Βελτιστοποίηση Πίνακα';
 $strOr = 'Ή';
-$strOverhead = 'Επιβάρυνση';
+$strOverhead = 'Περίσσεια';
 $strOverwriteExisting = 'Αντικατάσταση υπαρχόντων αρχείων';
 
 $strPageNumber = 'Σελίδα:';
@@ -470,7 +470,7 @@ $strShowingRecords = 'Εμφάνιση εγγραφής ';
 $strShowPHPInfo = 'Εμφάνιση πληροφοριών της PHP';
 $strShowTableDimension = 'Εμφάνιση διαστάσεων πινάκων';
 $strShowTables = 'Εμφάνιση πινάκων';
-$strShowThisQuery = ' Εμφάνιση εδώ ξανά αυτού του ερώτηματος';
+$strShowThisQuery = ' Επανεμφάνιση αυτού του ερώτηματος εδώ';
 $strShow = 'Εμφάνιση';
 $strSimplifiedChinese = 'Απλοποιημένα Κινεζικά';
 $strSingly = '(μοναδικά)';
@@ -482,7 +482,7 @@ $strSQLParserBugMessage = 'Υπάρχει περίπτωση να εντοπίσ
 $strSQLParserUserError = 'Φαίνεται να υπάρχει ένα λάθος στο ερώτημά σας. Το παρακάτω λάθος διακομιστή MySQL, εάν υπάρχει κάποιο, μπορεί επίσης να σας βοηθήσει να διαγνώσετε το πρόβλημα.';
 $strSQLQuery = 'Εντολή SQL';
 $strSQLResult = 'αποτέλεσμα SQL';
-$strSQL = 'SQL';
+$strSQL = 'Κώδικας SQL';
 $strSQPBugInvalidIdentifer = 'Άγνωστο Αναγνωριστικό';
 $strSQPBugUnclosedQuote = 'Ανοιχτά εισαγωγικά';
 $strSQPBugUnknownPunctuation = 'Άγνωστο σημείο στίξης';
@@ -579,7 +579,7 @@ $strWindowNotFound = 'Δεν ήταν δυνατό να ανανεωθεί το 
 $strWithChecked = 'Με τους επιλεγμένους:';
 $strWrongUser = 'Λανθασμένο όνομα χρήστη/κωδικός πρόσβασης. Άρνηση πρόσβασης.';
 
-$strXML = 'XML';
+$strXML = 'Κώδικας XML';
 
 $strYes = 'Ναι';
 
@@ -644,7 +644,7 @@ $strCaseInsensitive = 'χωρίς ταίριασμα πεζών-κεφαλαίω
 $strCaseSensitive = 'ταίριασμα πεζών-κεφαλαίων';
 $strCharsetsAndCollations = 'Σύνολα και Συνθέσεις Χαρακτήρων';
 $strCheck = 'Έλεγχος';
-$strCheckOverhead = 'Έλεγχος πινάκων με υπερκεφαλίδα';
+$strCheckOverhead = 'Επιλογή πινάκων με περίσσεια';
 $strClickToSelect = 'Πατήστε για επιλογή';
 $strClickToUnselect = 'Πατήστε για απεπιλογή';
 $strCollation = 'Σύνθεση';
@@ -756,8 +756,8 @@ $strHide = 'Απόκρυψη';
 $strHideShowAll = 'Απόκρυψη/Προβολή όλων';
 $strHideShowNoRelation = 'Απόκρυψη/Εμφάνιση Πινάκων χωρίς συσχέτιση';
 $strHostTableExplanation = 'Όταν χρησιμοποιείται ο Οικείος πίνακας, παραβλέπεται αυτό το πεδίο και χρησιμοποιούνται τιμές που είναι αποθηκευμένες στον Οικείο πίνακα.';
-$strHTMLExcel = 'Microsoft Excel 2000';
-$strHTMLWord = 'Microsoft Word 2000';
+$strHTMLExcel = 'Λογιστικό βιβλίο Microsoft Excel 2000';
+$strHTMLWord = 'Έγγραφο Microsoft Word 2000';
 
 $strIcelandic = 'Ισλανδικά';
 $strIEUnsupported = 'Ο Internet Explorer δεν υποστηρίζει αυτή τη λειτουργία.';
@@ -909,11 +909,11 @@ $strPBXTRowFileGrowSizeDesc = 'Το αναπτυγμένο μεγεθος των
 $strPBXTRowFileGrowSize = 'Αναπτυγμένο μέγεθος αρχείου γραμμής';
 $strPBXTTransactionBufferSizeDesc = 'Το μέγεθος του καθολικού buffer καταγραφής (η μηχανή δεσμεύει 2 buffers αυτού του μεγέθους). Η προεπιλογή είναι 1MB.';
 $strPBXTTransactionBufferSize = 'Μέγεθος buffer δραστηριοτήτων';
-$strPDF = 'PDF';
+$strPDF = 'Έγγραφο PDF';
 $strPDFReportExplanation = '(Δημιουργεί μια αναφορά με τα δεδομένα ενός πίνακα)';
 $strPDFReportTitle = 'Τίτλος αναφοράς';
 $strPersian = 'Περσικά';
-$strPhpArray = 'σειρά PHP';
+$strPhpArray = 'Σειρά PHP';
 $strPHPExtension = 'Επέκταση PHP';
 $strPlayAudio = 'Αναπαραγωγή ήχου';
 $strPleaseSelectPrimaryOrUniqueKey = 'Επιλέξτε το πρωτεύον κλειδί ή ένα μοναδικό κλειδί';
@@ -993,7 +993,7 @@ $strReplicationStatus_slave = 'Κατάσταση δευτερεύοντος';
 $strReplicationSynchronize = 'Συγχρονισμός βάσεων δεδομένων με την πρωτεύουσα';
 $strReplicationUnableToChange = 'Αδύνατη η αλλαγή της πρωτεύουσας';
 $strReplicationUnknownError = 'Άγνωστο σφάλμα';
-$strRestartInsertion = 'Επανεκκίνηση εισαγωγής με %s γραμμές';
+$strRestartInsertion = 'Επανεκκίνηση εισαγωγής με %s εγγραφές';
 $strRomanian = 'Ρουμάνικα';
 $strRoutineReturnType = 'Τύπος επιστροφής';
 $strRoutines = 'Εργασίες';
